fix footer shifting

--- a/app/sass/media.sass
+++ b/app/sass/media.sass
@@ -56,9 +56,10 @@
       height: auto
       font-size: 0.8em
      
-
   /*REVIEWS END*/
-
+  /*FOOTER*/
+  footer.footer
+    height: 136.59px
 
 /*==========  Desktop First  ==========*/
 @media only screen and (max-width : 1920px)
@@ -457,7 +458,7 @@
   /*FOOTER*/
   .footer
     font-size: 2em
-    height: 10vh
+    height: 102.39px
   /*FOOTER END*/
 
 @media only screen and (max-width : 670px)
@@ -770,16 +771,16 @@
   /*FORM END*/
 
   /*FOOTER*/
-  .footer
+  footer.footer
     font-size: 2em
     height: 80px
-    &__contacts
+    .footer__contacts
       margin-left: -1.6em
     .footer__contacts__item
       font-size: 1.3em!important
       
 
-    &__phone,&__mail
+    .footer__phone,.footer__mail
       position: absolute
       display: none      
 
